--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "async": "^0.9.0",
+    "csv-string": "^2.2.2",
     "simple-elasticsearch": "^0.2.1",
     "winston": "^0.8.0",
     "winston-elasticsearch": "^0.1.1"
