--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "async": "^0.9.0",
+    "csv-parse": "0.0.6",
     "csv-string": "^2.2.2",
+    "node-sync": "0.0.8",
     "simple-elasticsearch": "^0.2.1",
     "winston": "^0.8.0",
     "winston-elasticsearch": "^0.1.1"
